2004-02-22  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: paint NPCs translucently to prevent palette-cycling
	* shapes/shapevga.cc: removed Spark-translucency hack

2004-02-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* desktop/*: put .desktop file in /usr/share/applications,
	icon in /usr/share/icons.

2004-02-19  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mapedit/studio.cc: fixed main_window not getting toplevel_focus

2004-02-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* shapeid.h: fixed uninitialised member variable
	* mouse.cc: removed dynamic_cast

2004-02-17  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* audio/midi_drivers/Makefile.am: add win_midiout.*

2004-02-13  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mouse.cc: fixed dead actors causing movement slowdowns and/or crashes
	* data/bg/musket.shp: musket paperdoll art (by servus)
	* docs/art.txt: updated art table

2004-02-13  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs/chunks.cc: fix crash after activating eggs and teleporting
	* data/bg/pants.shp: use correct pants (by servus)

2004-02-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/bg/pants.shp: pants paperdoll art (by servus)
	* data/bg/collar.shp: leather collar paperdoll art (by servus)
	* data/bg/*gorget.shp: fixed female gorgets
	* data/bg/hawk.shp: tweaked hawk on female shoulder a bit
	* data/bg/hoods.shp: hoods paperdoll art (by servus)

2004-02-11  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/bg/shoes.shp: shoes paperdoll art
	* data/bg/triple_xbow.shp: triple crossbow paperdoll art
	* data/bg/musket_ammo.shp: musket ammo paperdoll art (by WishStone)

2004-02-11  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gumps/AudioOptions_gump.cc: only display midi settings when relevant
	* audio/Midi.cc: label music player id output
