@@ -41,3 +41,4 @@ pants.shp
 collar.shp
 hoods.shp
 musket.shp
+custom_sword.shp
